--- a/projects.css
+++ b/projects.css
@@ -6,6 +6,15 @@ body {
     display: flex;
 }
 
+.big {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    color: #2d02ad;
+    text-decoration: none;
+}
+
+
 .sidebar {
     width: 250px;
     background-color: #1a1a1a;
@@ -46,7 +55,7 @@ body {
 }
 
 .project-file {
-    background-color: #1a1a1a;
+    background-color: #080413;
     border: 2px solid #2d02ad;
     border-radius: 10px;
     padding: 20px;
