--- a/present/InStyles.css
+++ b/present/InStyles.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
 }
 
 
@@ -30,7 +29,7 @@ body {
 }
 
 .glitch-title h1::before, .glitch-title h1::after {
-    content: 'Project Title';
+    content: attr(data-text);
     position: absolute;
     top: 0;
     left: 0;
@@ -145,3 +144,59 @@ body {
 .glitch-button a:hover::before {
     transform: skewX(-20deg) translateX(150%);
 }
+
+@media screen and (max-width: 600px){
+	nav {
+		width: 100%;
+		position: relative;
+	}
+	main {
+		width: 100%;
+		position: relative;
+	}
+}
+
+/* stolen code from Pamishly (not really)*/
+@media screen and (max-width: 800px) {
+	.information img {
+	  width: 500px;
+	}
+	.information h1{
+		font-size: 28px;
+	}
+	.card p{
+		padding: 0%;
+		font-size: 9px;
+		line-height: 11px;
+	  }
+	  .card h3{
+		  font-size: 12px;
+	   }
+	  .card {
+		  width: 160px;
+		  height: 200px;
+		  margin: 2px;
+	  }
+	  .cardcontainer{
+		width:100%;
+		margin-left: 0%;
+	  }
+	  h1 {
+		  font-size: 16px;
+		  line-height: 18px;
+		  margin-bottom: 5px;
+	  }
+	  p	{
+		  font-size: 10px;
+		  line-height: 12px;
+	  }
+	  main{
+		height: 100vh;
+	  }
+     }
+
+  @media screen and (max-width: 500px) {
+	.information img {
+	  width: 300px;
+	}
+  }
